Tweak post nav, make alignright/left images clear, fix sidekick unit with image overlap

--- a/exploreveg/bootswatch.less
+++ b/exploreveg/bootswatch.less
@@ -377,8 +377,13 @@ p.byline {
     }
 }
 
-.previous {
-    float: right;
+#post-navigation {
+    margin-bottom: 10px;
+    margin-top: 10px;
+
+    .previous {
+        float: right;
+    }
 }
 
 #vsk-request {
@@ -465,7 +470,7 @@ img.content-right {
     padding: 10px;
 
     &.with-image {
-        width: 65%;
+        width: 50%;
     }
 
     blockquote {
@@ -562,9 +567,11 @@ figure {
 .alignright {
     float: right;
     margin: 0 0 20px 20px;
+    clear: both;
 }
 
 .alignleft {
     float: left;
     margin: 0 20px 20px 0;
+    clear: both;
 }
